--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "World of Warcraft Auction House data loader.",
 	"main": "index.js",
 	"scripts": {
-		"start": "bin/start.sh"
+		"start": "node server.js"
 	},
 	"dependencies": {
 		"underscore": "~1.8.2",
