--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
 	"name": "wow-ah",
 	"private": true,
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"description": "World of Warcraft Auction House data loader.",
 	"main": "index.js",
 	"scripts": {
 		"start": "NODE_ENV=development node server.js"
 	},
 	"dependencies": {
-		"underscore": "~1.8.2",
+		"event-stream":"~3.2.2",
+		"JSONStream": "~0.10.0",
 		"mongoose": "~3.8.0",
 		"async": "~0.9.0",
-		"colog": "~1.0.4",
-		"cron": "~1.0.9"
+		"colog": "~1.0.4"
 	},
 	"repository": {
 		"type": "git",
